--- a/dalmatia.html
+++ b/dalmatia.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="Taxi, Croatia, Plitvice lakes, Rastoke, Krka, Airport Franjo Tuđman">
   <meta name="description" content="Taxi Transfers to Dalmatia Croatia, to Zadar, to Split, to Dubrovnik, Explore Plitvice Lakes, Explore Rastoke">
+  <meta name="author" content="Krešimir Fiket">
   <title>Blue TAXI Zagreb</title>
 
   <!-- Google Fonts -->
@@ -22,6 +24,12 @@
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/5b5aebd3d4.js" crossorigin="anonymous"></script>
 </head>
+
+<style media="screen">
+  #aboutus {
+    background-color: #071A52;
+  }
+</style>
 
 <body>
 
@@ -46,7 +54,7 @@
             <a class="nav-link" href="pricing.html">Pricing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#options">Options</a>
+            <a class="nav-link" href="#aboutus">AboutUs</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
@@ -132,6 +140,8 @@
             the city of Zagreb,
           <p>Time to explore Plitvice Lakes or Rastoke, on your way to
             Zadar, Split or Dubrovnik...
+          <p>When planning a trip to Plitvice, you have to <a target="_blank" href="https://np-plitvicka-jezera.hr/en/plan-your-visit/istrazite-jezera/price-list/">buy tickets in advance</a>.
+            Every ticket has specific date and time window to enter.
           <p>Return trips to visit and explore Plitvice Lakes or Rastoke...
         </div>
       </div>
@@ -168,9 +178,35 @@
 
   </section>
 
+  <!-- About Us -->
+
+  <section id="aboutus">
+
+    <div class="container-fluid">
+
+      <div class="row">
+        <div class="col-lg-6" style="padding-right: 4%;">
+          <h2>Here's a few facts About us:</h2>
+          <p>We are a joint venture of three small business owners,
+          <p>We are Croatians from the city of Zagreb,
+          <p>We are friendly, we like working with common people and we put safety first...
+          <p>And we have three VW cars of different sizes, depending on number of passengers and luggage.</p>
+        </div>
+        <div class="col-lg-6" style="padding-left: 4%;">
+          <h2>This is what cars we have:</h2>
+          <p><a target="_blank" href="https://en.wikipedia.org/wiki/Volkswagen_Golf#Seventh_generation_(Mk7,_Typ_5G;_2012)">VW Golf - 7th Generation</a></p>
+          <p><a target="_blank" href="https://en.wikipedia.org/wiki/Volkswagen_Golf_Variant#Golf_Mk7_Estate_(2013%E2%80%932020)">VW Golf Variant - 7th Generation</a></p>
+          <p><a target="_blank" href="https://en.wikipedia.org/wiki/Volkswagen_Passat#B8_(Typ_3G;_2015)">VW Passat Variant - 7th Generation</a></p>
+        </div>
+      </div>
+
+    </div>
+
+  </section>
+
   <!-- Carousel -->
 
-  <section id="options">
+  <!-- <section id="options">
 
     <div id="intro-carousel" class="carousel slide" data-bs-interval="false">
       <div class="carousel-inner">
@@ -199,7 +235,7 @@
       </button>
     </div>
 
-  </section>
+  </section> -->
 
   <section id="bottom">
 
@@ -218,6 +254,9 @@
         <div class="col-md-6 col-lg-3">
           <a href="index.html"><button type="button" class="btn-bottom-1 btn btn-outline-success"><i class="fa-solid fa-house"></i></i> HOME</button></a>
         </div>
+      </div>
+      <div class="row">
+        <p class="copyright">©Author @The Blue TAXI Zagreb.</p>
       </div>
 
     </div>
