--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="Taxi, Croatia, Plitvice lakes, Rastoke, Krka, Airport Franjo Tuđman">
   <meta name="description" content="Taxi Transfers from Zagreb Croatia, to Zadar, to Split, to Dubrovnik, to Pula, to Rijeka, Zagreb Tour, Explore Zagreb">
+  <meta name="author" content="Krešimir Fiket">
   <title>Blue TAXI Zagreb</title>
 
   <!-- Google Fonts -->
@@ -134,6 +136,7 @@
           <p>Pick-up at the "Franjo Tuđman" airport, or any other spot in
             the city of Zagreb,
           <p>Transfer to places off the coast, like The Castle of Trakošćan...
+          <p>When plannng the trip, don't forget to check if <a target="_blank" href="https://trakoscan.hr/english/">the tickets</a> are available!
           <p>Transfer to Zadar, Split, Dubrovnik, Pula and other places on the coast...</p>
         </div>
 
@@ -243,6 +246,9 @@
         <div class="col-md-6 col-lg-3">
           <a href="dalmatia.html"><button type="button" class="btn-bottom-1 btn btn-outline-success"><i class="fa-solid fa-water"></i> DALMATIA</button></a>
         </div>
+      </div>
+      <div class="row">
+        <p class="copyright">©Author @The Blue TAXI Zagreb.</p>
       </div>
 
     </div>
