--- a/pricing.html
+++ b/pricing.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="Taxi, Croatia, Plitvice lakes, Rastoke, Krka, Airport Franjo Tuđman">
   <meta name="description" content="Prices for Taxi Transfers from Zagreb Croatia, to Zadar, to Split, to Dubrovnik, to Pula, to Rijeka, Zagreb Tour, Explore Zagreb">
+  <meta name="author" content="Krešimir Fiket">
   <title>Blue TAXI Zagreb</title>
 
   <!-- Google Fonts -->
@@ -59,7 +61,7 @@
   }
 
   .col-form {
-    padding: 0 40px;
+    padding: 0 0 0 40px;
   }
 
   input[type=submit] {
@@ -84,15 +86,6 @@
 
   label {
     padding-top: 20px
-  }
-
-  a {
-    color: #fff;
-    font-family: 'Ubuntu', sans-serif;
-  }
-
-  a:hover {
-    color: #A7FF83;
   }
 </style>
 
@@ -151,38 +144,51 @@
                 <th>Return Trips</th>
                 <th>€</td>
                 <th>HRK</td>
+                <th>Specifics</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td><b>Zagreb Tour *</b></td>
+                <td><b>Zagreb Tour</b></td>
                 <td>20 / hr</td>
                 <td>150 / hr</td>
+                <td>2hrs minimum</td>
               </tr>
               <tr>
                 <td><b>Trakošćan</b></td>
                 <td>140</td>
-                <td>1050</td>
+                <td>1.050</td>
+                <td>2hrs to explore</td>
               </tr>
               <tr>
-                <td><b>Rastoke **</b></td>
-                <td>150</td>
-                <td>1125</td>
+                <td><b>Rastoke*</b></td>
+                <td>170</td>
+                <td>1.275</td>
+                <td>2hrs to explore</td>
               </tr>
               <tr>
-                <td><b>Plitvice L. **</b></td>
-                <td>200</td>
-                <td>1.500</td>
+                <td><b>Plitvice Lakes*</b></td>
+                <td>220</td>
+                <td>1.650</td>
+                <td>5hrs to explore</td>
               </tr>
               <tr>
                 <td><b>Viewpoint @Plitvice</b></td>
                 <td>15</td>
                 <td>115</td>
+                <td>Charged separately</td>
+              </tr>
+              <tr>
+                <td><b>Waiting</b></td>
+                <td>15 / hr</td>
+                <td>115 / hr</td>
+                <td>hrs above specifics</td>
               </tr>
             </tbody>
             <tfoot>
               <tr>
-                <td colspan="3">* minimum duration: 2 hrs / ** 3hrs included on way to Zadar, Šibenik, Split / *** charged separately
+                <td colspan="4">
+                  *enroute to Zadar, Šibenik or Split, 3hrs to explore. Buy tickets in advance!
                 </td>
               </tr>
             </tfoot>
@@ -235,11 +241,6 @@
                 <td><b>Dubrovnik</b></td>
                 <td>660</td>
                 <td>4.950</td>
-              </tr>
-              <tr>
-                <td><b>Waiting</b></td>
-                <td>15 / hr</td>
-                <td>115 / hr</td>
               </tr>
             </tbody>
           </table>
@@ -295,7 +296,7 @@
 
   </section>
 
-  <!-- Zagreb Section -->
+  <!-- About Us -->
 
   <section id="aboutus">
 
@@ -306,6 +307,7 @@
           <h2>Here's a few facts About us:</h2>
           <p>We are a joint venture of three small business owners,
           <p>We are Croatians from the city of Zagreb,
+          <p>We are friendly, we like working with common people and we put safety first...
           <p>And we have three VW cars of different sizes, depending on number of passengers and luggage.</p>
         </div>
         <div class="col-lg-6" style="padding-left: 4%;">
@@ -337,6 +339,9 @@
         <div class="col-md-6 col-lg-3">
           <a href="index.html"><button type="button" class="btn-bottom-1 btn btn-outline-success"><i class="fa-solid fa-house"></i> HOME</button></a>
         </div>
+      </div>
+      <div class="row">
+        <p class="copyright">©Author @The Blue TAXI Zagreb.</p>
       </div>
 
     </div>
