--- a/dalmatia.html
+++ b/dalmatia.html
@@ -256,7 +256,7 @@
         </div>
       </div>
       <div class="row">
-        <p class="copyright">©Author @The Blue TAXI Zagreb.</p>
+        <p class="copyright">©_Author_@_The_Blue-TAXI-Zagreb_</p>
       </div>
 
     </div>
