--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <p>Pick-up at the "Franjo Tuđman" airport, or any other spot in
             the city of Zagreb,
           <p>Transfer to places off the coast, like The Castle of Trakošćan...
-          <p>When plannng the trip, don't forget to check if <a target="_blank" href="https://trakoscan.hr/english/">the tickets</a> are available!
+          <p>When planning the trip, don't forget to check if <a target="_blank" href="https://trakoscan.hr/english/">the tickets</a> are available!
           <p>Transfer to Zadar, Split, Dubrovnik, Pula and other places on the coast...</p>
         </div>
 
@@ -248,7 +248,7 @@
         </div>
       </div>
       <div class="row">
-        <p class="copyright">©Author @The Blue TAXI Zagreb.</p>
+        <p class="copyright">©_Author_@_The_Blue-TAXI-Zagreb_</p>
       </div>
 
     </div>
