--- a/pricing.html
+++ b/pricing.html
@@ -61,7 +61,7 @@
   }
 
   .col-form {
-    padding: 0 0 0 40px;
+    padding: 0 20px;
   }
 
   input[type=submit] {
@@ -341,7 +341,7 @@
         </div>
       </div>
       <div class="row">
-        <p class="copyright">©Author @The Blue TAXI Zagreb.</p>
+        <p class="copyright">©_Author_@_The_Blue-TAXI-Zagreb_</p>
       </div>
 
     </div>
